Added sticky option

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       $('#ytChanPlayer').ytChanPlayer({
         username: 'youtube',
         maxResults: 10,
+        sticky: 'GchctYX9i2o'
       });
     });
   }(jQuery));
