--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>jQuery: YouTube Channel Player Plugin</title>
+  <title>jQuery: YouTube Channel Player Plugin v 0.1.3</title>
   <link rel="stylesheet" type="text/css" href="css/style.css" />  
 </head>
 <body>
